hphp/test/zend/bad/ext/standard/tests/general_functions/bug43293_3.php
<?php
ini_set('register_argc_argv', On);

$args = array(true, false, "f");
var_dump(getopt("f", $args), $args);
?>